--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@ramonak/react-progress-bar": "^5.3.0"
     }
 }
